--- a/index.html
+++ b/index.html
@@ -13,26 +13,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@100;400;700&family=Open+Sans:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
     <title>Portfolio SophHP</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1>Sophie Haugland</h1>
+      <p>Portfolio</p>
+    </header>
     <main>
-      <h1>Portfolio SophHP</h1>
       <section class="project-section project-one">
         <h2>Project 1</h2>
-        <a class="project-link" href="rainydays/" target="_blank"
-          >Cross course project - Rainy Days
-          <div class="product-preview">
-            <img src="images/mac-rain.png" alt="" />
-            <img src="images/rain-ipad.png" alt="" />
-            <img src="images/rain.png" alt="" />
-          </div>
-        </a>
+        <div class="link-container">
+          <a class="project-link" href="rainydays/" target="_blank">
+            <div class="product-preview">
+              <img class="laptop" src="images/mac-rain.png" alt="" />
+              <img class="ipad" src="images/rain-ipad.png" alt="" />
+              <img class="phone" src="images/rain.png" alt="" />
+            </div>
+          </a>
+          <a class="project-link" href="rainydays/" target="_blank"
+            >Cross course project - Rainy Days</a
+          >
+        </div>
+
         <div class="information_container">
           <div class="buttons_container">
             <h3>What I changed</h3>
@@ -249,17 +256,21 @@
       </section>
       <section class="project-section project-two">
         <h2>Project 2</h2>
-        <a
-          class="project-link"
-          href="https://semester-project-1-arctic-museum.netlify.app/"
-          target="_blank"
-          >Semester project 1 - Science Museum
-          <div class="product-preview">
-            <img src="images/mac-museum.png" alt="" />
-            <img src="images/museum-ipad.png" alt="" />
-            <img src="images/museum.png" alt="" />
-          </div>
-        </a>
+        <div class="link-container">
+          <a class="project-link" href="rainydays/" target="_blank">
+            <div class="product-preview">
+              <img class="laptop" src="images/mac-museum.png" alt="" />
+              <img class="ipad" src="images/museum-ipad.png" alt="" />
+              <img class="phone" src="images/museum.png" alt="" />
+            </div>
+          </a>
+          <a
+            class="project-link"
+            href="https://semester-project-1-arctic-museum.netlify.app/"
+            target="_blank"
+            >Semester project 1 - Science Museum</a
+          >
+        </div>
         <div class="information_container">
           <div class="buttons_container">
             <h3>What I changed</h3>
@@ -476,18 +487,23 @@
       </section>
       <section class="project-section project-three">
         <h2>Project 3</h2>
-        <a
-          class="project-link"
-          href="https://portfolio-updates--where-bugs-unite.netlify.app/"
-          target="_blank"
-        >
-          Exam 1 - Bug Blog
-          <div class="product-preview">
-            <img src="images/mac-bug.png" alt="" />
-            <img src="images/bug-ipad.png" alt="" />
-            <img src="images/bug-blog.png" alt="" />
-          </div>
-        </a>
+        <div class="link-container">
+          <a class="project-link" href="rainydays/" target="_blank">
+            <div class="product-preview">
+              <img class="laptop" src="images/mac-bug.png" alt="" />
+              <img class="ipad" src="images/bug-ipad.png" alt="" />
+              <img class="phone" src="images/bug-blog.png" alt="" />
+            </div>
+          </a>
+          <a
+            class="project-link"
+            href="https://portfolio-updates--where-bugs-unite.netlify.app/"
+            target="_blank"
+          >
+            Exam 1 - Bug Blog</a
+          >
+        </div>
+
         <div class="information_container">
           <div class="buttons_container">
             <h3>What I changed</h3>
