last updates and github links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg" />
     <title>Portfolio SophHP</title>
   </head>
   <body>
@@ -28,18 +28,36 @@
       <section class="project-section project-one">
         <h2>Project 1</h2>
         <div class="link-container">
-          <a class="project-link" href="rainydays/" target="_blank">
+          <a
+            class="project-link"
+            href="https://sophie-haugland-rainy-days.netlify.app/"
+            target="_blank"
+          >
             <div class="product-preview">
-              <img class="laptop" src="images/mac-rain.png" alt="" />
-              <img class="ipad" src="images/rain-ipad.png" alt="" />
-              <img class="phone" src="images/rain.png" alt="" />
+              <img
+                class="laptop"
+                src="images/mac-rain.png"
+                alt="laptop displaying preview of Rainydays website"
+              />
+              <img
+                class="ipad"
+                src="images/rain-ipad.png"
+                alt="ipad displaying preview of Rainydays website"
+              />
+              <img
+                class="phone"
+                src="images/rain.png"
+                alt="iphone displaying preview of Rainydays website"
+              />
             </div>
           </a>
           <a class="project-link" href="rainydays/" target="_blank"
             >Cross course project - Rainy Days</a
           >
         </div>
-
+        <a class="github-link" href="https://github.com/Soph-H-P/rainy-days" target="_blank"
+          >GitHub Repo</a
+        >
         <div class="information_container">
           <div class="buttons_container">
             <h3>What I changed</h3>
@@ -257,11 +275,27 @@
       <section class="project-section project-two">
         <h2>Project 2</h2>
         <div class="link-container">
-          <a class="project-link" href="rainydays/" target="_blank">
+          <a
+            class="project-link"
+            href="https://semester-project-1-arctic-museum.netlify.app/"
+            target="_blank"
+          >
             <div class="product-preview">
-              <img class="laptop" src="images/mac-museum.png" alt="" />
-              <img class="ipad" src="images/museum-ipad.png" alt="" />
-              <img class="phone" src="images/museum.png" alt="" />
+              <img
+                class="laptop"
+                src="images/mac-museum.png"
+                alt="laptop displaying preview of the arctic museum website"
+              />
+              <img
+                class="ipad"
+                src="images/museum-ipad.png"
+                alt="ipad displaying preview of the arctic museum website"
+              />
+              <img
+                class="phone"
+                src="images/museum.png"
+                alt="phone displaying preview of the arctic museum website"
+              />
             </div>
           </a>
           <a
@@ -271,6 +305,9 @@
             >Semester project 1 - Science Museum</a
           >
         </div>
+        <a class="github-link" href="https://github.com/Soph-H-P/arctic-museum" target="_blank"
+          >GitHub Repo</a
+        >
         <div class="information_container">
           <div class="buttons_container">
             <h3>What I changed</h3>
@@ -488,11 +525,27 @@
       <section class="project-section project-three">
         <h2>Project 3</h2>
         <div class="link-container">
-          <a class="project-link" href="rainydays/" target="_blank">
+          <a
+            class="project-link"
+            href="https://portfolio-updates--where-bugs-unite.netlify.app/"
+            target="_blank"
+          >
             <div class="product-preview">
-              <img class="laptop" src="images/mac-bug.png" alt="" />
-              <img class="ipad" src="images/bug-ipad.png" alt="" />
-              <img class="phone" src="images/bug-blog.png" alt="" />
+              <img
+                class="laptop"
+                src="images/mac-bug.png"
+                alt="laptop displaying preview of the bug blog website"
+              />
+              <img
+                class="ipad"
+                src="images/bug-ipad.png"
+                alt="ipad displaying preview of the bug blog website"
+              />
+              <img
+                class="phone"
+                src="images/bug-blog.png"
+                alt="phone displaying preview of the bug blog website"
+              />
             </div>
           </a>
           <a
@@ -503,7 +556,12 @@
             Exam 1 - Bug Blog</a
           >
         </div>
-
+        <a
+          class="github-link"
+          href="https://github.com/Noroff-FEU-Assignments/project-exam-1-Soph-H-P/tree/portfolio-updates"
+          target="_blank"
+          >GitHub Repo</a
+        >
         <div class="information_container">
           <div class="buttons_container">
             <h3>What I changed</h3>
@@ -731,7 +789,16 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="me-container">
+        <img src="images/logo.svg" alt="logo" />
+        <div>
+          <h3>Sophie Haugland</h3>
+          <p>Portfolio</p>
+        </div>
+      </div>
+      <p>&copy; Sophie Haugland</p>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
